# ArxivRAG

./: .gitignore  Dockerfile  README.md  create_db.py  docker-compose-prod.yml  docker-compose.yml  env_template  pyproject.toml
.github/workflows/: pylint.yml
json_gemini/: 2401.00974v1.json  2401.01141v1.json  2401.01265v1.json  2401.01442v1.json  2401.02430v1.json  2401.03424v1.json  2401.04846v1.json  2401.05570v1.json  2401.05654v1.json  2401.06102v1.json  2401.06401v1.json  2401.06493v1.json  2401.07179v1.json  2401.08579v1.json  2401.08584v1.json  2401.08632v1.json  2401.08815v1.json  2401.09695v1.json  2401.10178v1.json  2401.10917v1.json  2401.11627v1.json  2401.11648v1.json  2401.11724v1.json  2401.12255v1.json  2401.12756v1.json  2401.13641v1.json  2401.14425v1.json  2401.14968v1.json  2401.15132v1.json  2401.15284v1.json  2401.15810v1.json  2401.16299v1.json  2401.16367v1.json  2401.16443v1.json  2401.16462v1.json  2401.16708v1.json  2401.17373v1.json  2401.17975v1.json  2402.00024v1.json  2402.00969v1.json  (+23640 more)
rag/: db.py  indexing.py  login.py  rag_functions.py  rag_pipeline.py  redis_saver.py  settings.py  streamlit.py  ui.py  utils.py
rag/api/: api.py  models.py  utils.py
rag/db/: db.py  db_objects.py
rag/frontend/: index.html  package-lock.json  style.css
rag/pages/: ui.py
rag/web/arxiv ai chat/: package-lock.json  package.json
rag/web/arxiv ai chat/src/: main.js
rag/web/arxiv ai chat/src/assets/: style.css
rag/web/arxiv ai chat/src/components/: ChatInput.vue  ChatMessage.vue
rag/web/arxiv ai chat/src/router/: index.js
rag/web/arxiv ai chat/src/stores/: index.js
rag/web/arxiv ai chat/src/utils/: markdownProcessor.js
rag/web/arxiv ai chat/src/views/: ChatView.vue  LoginView.vue  RegisterView.vue
rag/web/arxiv_ai_chat/: README.md  index.html  package-lock.json  package.json  vite.config.js
rag/web/arxiv_ai_chat/src/: App.vue  main.js
rag/web/arxiv_ai_chat/src/components/: ChatHeader.vue  ChatItem.vue  ChatList.vue  ChatMessage.vue  ChatMessages.vue  EmptyState.vue  PaginationControls.vue  UserInfo.vue
rag/web/arxiv_ai_chat/src/router/: index.js
rag/web/arxiv_ai_chat/src/stores/: index.js
rag/web/arxiv_ai_chat/src/utils/: dateFormatter.js  markdownProcessor.js
rag/web/arxiv_ai_chat/src/views/: ChatView.vue  LoginView.vue  RegisterView.vue
scripts/: all_cs_ai_files.py  download_pdfs.sh  gemini.py
tests/: test_rag.py
