[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["Michał Kulczykowski <michal@qdc.ai>"]

[tool.poetry.dependencies]
python = "^3.11"
langchain-weaviate = "^0.0.4"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
weaviate-client = "^4.11.0"
langchain-google-genai = "^2.0.9"
streamlit = "^1.42.2"
langgraph = "^0.2.74"
langchain = "^0.3.19"
langchain-openai = "^0.3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
