[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["GlockPL <pakerzus@tlen.pl>"]

[tool.poetry.dependencies]
python = "^3.11"
langchain-weaviate = "^0.0.4"
pydantic = {extras = ["email"], version = "^2.10.6"}
pydantic-settings = "^2.7.1"
weaviate-client = "^4.11.0"
langchain-google-genai = "^2.0.9"
langgraph = "^0.2.74"
langchain = "^0.3.19"
langchain-openai = "^0.3.6"
langgraph-checkpoint-postgres = "^2.0.15"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
python-jose = "^3.4.0"
python-multipart = "^0.0.20"
psycopg2-binary = "^2.9.10"
redis = "^5.2.1"
psycopg-binary = "^3.2.5"
json-repair = "^0.39.1"
natsort = "^8.4.0"
google-genai = "^1.5.0"
mistralai = "^1.5.1"
PyMuPDF = "^1.25.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
